<resources>
    <string name="app_name">My Fitness Buddy</string>
    <string name="ad_mob_id" translatable="false">ca-app-pub-1421069741839692~9245051310</string>
    <string name="ad_mob_banner" translatable="false">ca-app-pub-1421069741839692/5923919254</string>
    <string name="facebook_application_id" translatable="false">313771212904333</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb313771212904333</string>

    <string name="privacy_policy">
        <p><b>Privacy Policy</b></p>
        <p>RJ built the <b>Fit bud</b> app as an Ad Supported app. This SERVICE is provided by RJ at no cost and is intended for use as is.</p>
        <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</p>
        <p>If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.</p>
        <p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Fit bud unless otherwise defined in this Privacy Policy.</p>
        <p><b>Information Collection and Use</b></p>
        <p>For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.</p>
        <p>The app does use third party services that may collect information used to identify you.</p>
        <p>Link to privacy policy of third party service providers used by the app</p>
        <ul>
            <li>Google Play Services</li>
            <li>AdMob</li>
            <li>Firebase Analytics</li>
            <li>Facebook</li>
            <li>Fabric</li>
            <li>Crashlytics</li>
        </ul>
        <p><b>Log Data</b></p>
        <p>I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.</p>
        <p><b>Cookies</b></p>
        <p>Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device's internal memory.</p>
        <p>This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</p>
        <p><b>Service Providers</b></p>
        <p>I may employ third-party companies and individuals due to the following reasons:</p>
        <ul>
            <li>To facilitate our Service;</li>
            <li>To provide the Service on our behalf;</li>
            <li>To perform Service-related services; or</li>
            <li>To assist us in analyzing how our Service is used.</li>
        </ul>
        <p>I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</p>
        <p><b>Security</b></p>
        <p>I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.</p>
        <p><b>inks to Other Sites</b></p>
        <p>This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</p>
        <p><b>Children’s Privacy</b></p>
        <p>These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.</p>
        <p><b>Changes to This Privacy Policy</b></p>
        <p>I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</p>
        <p><b>Contact Us</b></p>
        <p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at <b>r.j.chomik@gmail.com.</b></p>
    </string>

    <string name="eula">
	<p>This End-User License Agreement ("EULA") is a legal agreement between you and <b>Non Profit</b></p>
	<p>This EULA agreement governs your acquisition and use of our <i>My Fitness Buddy</i> software ("Software") directly from <b>Non Profit</b> or indirectly through a <b>Non Profit</b> authorized reseller or distributor (a "Reseller").</p>
	<p>Please read this EULA agreement carefully before completing the installation process and using the <i>My Fitness Buddy</i> software. It provides a license to use the <i>My Fitness Buddy</i> software and contains warranty information and liability disclaimers.</p>
	<p>If you register for a free trial of the <i>My Fitness Buddy</i> software, this EULA agreement will also govern that trial. By clicking "accept" or installing and/or using the <i>My Fitness Buddy</i> software, you are confirming your acceptance of the Software and agreeing to become bound by the terms of this EULA agreement.</p>
	<p>If you are entering into this EULA agreement on behalf of a company or other legal entity, you represent that you have the authority to bind such entity and its affiliates to these terms and conditions. If you do not have such authority or if you do not agree with the terms and conditions of this EULA agreement, do not install or use the Software, and you must not accept this EULA agreement.</p>
	<p>This EULA agreement shall apply only to the Software supplied by <b>Non Profit</b> herewith regardless of whether other software is referred to or described herein. The terms also apply to any <b>Non Profit</b> updates, supplements, Internet-based services, and support services for the Software, unless other terms accompany those items on delivery. If so, those terms apply. This EULA was created by <a href="https://eulatemplate.com">EULA Template</a> for <i>My Fitness Buddy</i>.</p>
	<h3>License Grant</h3>
	<p><b>Non Profit</b> hereby grants you a personal, non-transferable, non-exclusive licence to use the <i>My Fitness Buddy</i> software on your devices in accordance with the terms of this EULA agreement.</p>
	<p>You are permitted to load the <i>My Fitness Buddy</i> software (for example a PC, laptop, mobile or tablet) under your control. You are responsible for ensuring your device meets the minimum requirements of the <i>My Fitness Buddy</i> software.</p>
	<p>You are not permitted to:</p>
	<ul>
		<li>Edit, alter, modify, adapt, translate or otherwise change the whole or any part of the Software nor permit the whole or any part of the Software to be combined with or become incorporated in any other software, nor decompile, disassemble or reverse engineer the Software or attempt to do any such things</li>
		<li>Reproduce, copy, distribute, resell or otherwise use the Software for any commercial purpose</li>
		<li>Allow any third party to use the Software on behalf of or for the benefit of any third party</li>
		<li>Use the Software in any way which breaches any applicable local, national or international law</li>
		<li>use the Software for any purpose that <b>Non Profit</b> considers is a breach of this EULA agreement</li>
	</ul>
	<h3>Intellectual Property and Ownership</h3>
	<p><b>Non Profit</b> shall at all times retain ownership of the Software as originally downloaded by you and all subsequent downloads of the Software by you. The Software (and the copyright, and other intellectual property rights of whatever nature in the Software, including any modifications made thereto) are and shall remain the property of <b>Non Profit</b>.</p>
	<p><b>Non Profit</b> reserves the right to grant licences to use the Software to third parties.</p>
	<h3>Termination</h3>
	<p>This EULA agreement is effective from the date you first use the Software and shall continue until terminated. You may terminate it at any time upon written notice to <b>Non Profit</b>.</p>
	<p>It will also terminate immediately if you fail to comply with any term of this EULA agreement. Upon such termination, the licenses granted by this EULA agreement will immediately terminate and you agree to stop all access and use of the Software. The provisions that by their nature continue and survive will survive any termination of this EULA agreement.</p>
	<h3>Governing Law</h3>
    <p>This EULA agreement, and any dispute arising out of or in connection with this EULA agreement, shall be governed by and construed in accordance with the laws of <b>Ireland</b>.</p>
</string>

    <string name="signing">Continue with Google</string>
    <string name="signinf">Continue with Facebook</string>
    <string name="eulabtn">End-User License Agreement (EULA) of <i>My Fitness Buddy</i></string>
    <string name="back_btn">Back</string>
    <string name="google">Google</string>
    <string name="fb">Facebook</string>
    <string name="or">OR</string>
    <string name="edit">EDIT PROFILE</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="default_user_nick">No Name</string>

    <string name="cancel">CANCEL</string>
    <string name="edit_password">Change Password</string>
    <string name="signout">Sign Out</string>
    <string name="default_location">Choose your location or allow location to be found.</string>
    <string name="default_activities">Choose your activities from list.</string>
    <string name="privacy_policy_btn">Privacy Policy</string>
    <string name="save_btn">SAVE</string>
    <string name="enter_location">Enter your location</string>
    <string name="enter_nickname">Enter your name/nick</string>
    <string name="choose_activities">Choose up to 5 activities</string>

    <string name="email">email</string>
    <string name="username">username</string>
    <string name="url">url</string>
    <string name="location">location</string>
    <string name="fav_activities">fav_activities</string>

</resources>
