<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >
        <!--todo maybe for future allow to change profile picture-->

        <!--edittext_layot-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/m_p_20dp"
            android:id="@+id/edittext_layout"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nickname_et"
                android:background="@drawable/border_transparent"
                android:textSize="@dimen/text_28"
                android:hint="@string/enter_nickname"
                android:gravity="center"
                android:layout_margin="@dimen/m_p_10dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_et"
                android:background="@drawable/border_transparent"
                android:textSize="@dimen/text_28"
                android:hint="@string/enter_your_email"
                android:gravity="center"
                android:layout_margin="@dimen/m_p_10dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/location"
                android:background="@drawable/border_transparent"
                android:textSize="@dimen/text_28"
                android:hint="@string/enter_location"
                android:gravity="center"
                android:layout_margin="@dimen/m_p_10dp"
                />
        </LinearLayout>

        <!--activity_list_layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_list_layout"
            android:layout_below="@+id/edittext_layout"
            android:layout_margin="@dimen/m_p_10dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_activities"
                android:textSize="@dimen/text_24"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/dark_navy"
                />
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activity_list"
                >

            </ListView>
        </LinearLayout>
        <!--buttons_layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_list_layout"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/go_back_btn"
                android:text="@string/back_btn"
                android:layout_weight="1"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/save_btn"
                android:text="@string/save_btn"
                android:layout_weight="1"
                android:background="@drawable/border"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>