<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:textSize="@dimen/normal_text"
            android:text="@string/eulabtn"
            android:textColor="@color/black"
        />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text"
                    android:text="@string/eula"
                />
            </ScrollView>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        >
        <Button
            android:layout_alignParentBottom="true"
            android:id="@+id/back_btn"
            android:text="@string/back_btn"
            android:background="@drawable/border_transparent"
            android:padding="@dimen/marginT"
            android:textSize="@dimen/big_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>
</FrameLayout>
