<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    >

    <!--google_layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:background="@drawable/gradient_box"
        android:layout_marginTop="@dimen/big_margin"
        android:clickable="true"
    >
        <ImageButton
            android:id="@+id/g_sign_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/google"
            android:paddingRight="@dimen/marginT"
            android:contentDescription="@string/google" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signing"
            android:textSize="@dimen/big_text"
            android:textColor="@color/l_grey"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <!--fb_layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:background="@drawable/gradient_box"
        android:layout_marginTop="@dimen/marginT"
        android:clickable="true"
    >

        <ImageButton
            android:id="@+id/fb_sign_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/fb"
            android:paddingRight="@dimen/marginT"
            android:contentDescription="@string/fb" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signinf"
            android:textSize="@dimen/big_text"
            android:textColor="@color/l_grey"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <!--email_layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:text="OR"
            android:textSize="@dimen/big_text"
            android:textColor="@color/yellow"
            android:gravity="center"
        />
        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_transparent"
            android:hint="Enter your email"
            android:textSize="@dimen/big_text"
            android:textColor="@color/blue"
            android:layout_margin="@dimen/margin_20"
            android:gravity="center"
        />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_transparent"
                android:hint="Enter your password"
                android:textSize="@dimen/big_text"
                android:textColor="@color/blue"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:singleLine="true"
                android:gravity="center"
                android:inputType="textPassword"
                />
            <ImageView
                android:id="@+id/inside_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:src="@drawable/hideeye"
                android:layout_alignTop="@id/password_edittext"
                android:layout_alignBottom="@id/password_edittext"
                android:layout_alignRight="@id/password_edittext"

                />

            <ImageView
                android:id="@+id/outside_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/inside_imageview"
                android:layout_alignBottom="@id/inside_imageview"
                android:layout_alignLeft="@id/inside_imageview"
                android:layout_alignRight="@id/inside_imageview"
                android:scaleType="fitXY"
                android:src="@drawable/showeye"
                android:visibility="invisible"
                />
        </RelativeLayout>
    </LinearLayout>

    <!--eula_btn_layout-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/marginT"
        android:gravity="center_horizontal"
    >
        <Button
            android:id="@+id/eula_btn"
            android:text="@string/eulabtn"
            android:textSize="@dimen/small_text"
            android:textColor="@color/white"
            android:background="@drawable/border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/marginT"
            android:layout_alignParentBottom="true"
        />
    </RelativeLayout>

</LinearLayout>