<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="right"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/settings_btn"
                android:background="@drawable/cogs"
                />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
            <ImageView
                android:id="@+id/background"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/m_p_200dp"
                android:background="@drawable/profile_circle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/m_p_20dp"
                />
            <ImageView
                android:id="@+id/photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/background"
                android:layout_alignBottom="@id/background"
                android:layout_alignLeft="@id/background"
                android:layout_alignRight="@id/background"
                android:scaleType="fitXY"
                android:src="@drawable/default_profile"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/m_p_5dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/hline"
                android:layout_margin="@dimen/m_p_20dp"
                />

            <!--user name editview-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/m_p_5dp"
                android:layout_margin="@dimen/m_p_5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_nick"
                    android:text="@string/default_user_nick"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                />

            </LinearLayout>

            <!--email editview-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/m_p_5dp"
                android:layout_margin="@dimen/m_p_5dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_email"
                    android:text="@string/default_user_nick"
                    android:gravity="center"
                />

            </LinearLayout>

            <!--location editview-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/m_p_5dp"
                android:layout_margin="@dimen/m_p_5dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_location"
                    android:text="@string/default_location"
                    android:gravity="center"
                />
            </LinearLayout>

            <!--list of activities-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/m_p_5dp"
                android:layout_margin="@dimen/m_p_5dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_list"
                    android:text="@string/default_user_nick"
                    android:gravity="center"
                    />
            </LinearLayout>

            <!--password editview-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/m_p_5dp"
                android:layout_margin="@dimen/m_p_5dp"
                >
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_btn"
                    android:text="@string/edit"
                    android:background="@drawable/border"
                    android:layout_marginBottom="@dimen/m_p_5dp"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password_edit_btn"
                    android:text="@string/edit_password"
                    android:background="@drawable/border"
                />
            </LinearLayout>

            <!--LogOut button editview-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/m_p_5dp"
                android:layout_margin="@dimen/m_p_5dp"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signout_btn"
                    android:text="@string/signout"
                    android:background="@drawable/border"
                    android:layout_weight="1"
                />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>